# Roulette2

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  Main.kt
action/: Action.kt  ActionSelector.kt  BUILD  Timeout.kt
config/: BUILD  Configuration.kt  ConfigurationGestaltImpl.kt  MoeAndFriendsConfiguration.kt
config/types/: Action.kt  BUILD  Bounds.kt  Role.kt
